--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,20 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+
+        {% if app.user %}
+            <a href="{{path('app_logout')}}">Déconnection</a>
+            <a href="">Mon profil</a>
+            
+        {% else %}
+            <a href="{{path('app_login')}}">Connection</a>
+            <a href="{{path('app_register')}}">S'enregistrer</a>
+        {% endif %}
+
+        {% if is_granted('ROLE_ADMIN') %}
+            <a href="">Panel admin</a>
+        {% endif %}
+        {% block body %}
+        {% endblock %}
     </body>
 </html>
